# dendrite

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/board/: mod.rs
src/cli/: command.rs  mod.rs  paths.rs
src/data/: fetch.rs  github.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: issues.rs
src/ui/lib/: client.rs  mod.rs
