[package]
name = "dendrite"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
tuirealm = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
reqwest = "0.12.9"
octocrab = "0.42.0"
clap = { version = "4.5.21", features = ["derive"] }
serde = "1.0.215"
url = "2.5.3"
